--- a/musicplayer/pubspec.yaml
+++ b/musicplayer/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   flutter_bloc: ^8.0.1
   bloc: ^8.0.3
   equatable: ^2.0.3
+  http: ^0.13.4
+  get_it: ^7.2.0
 
 dev_dependencies:
   flutter_test:
