--- a/musicplayer/pubspec.yaml
+++ b/musicplayer/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   http: ^0.13.4
   get_it: ^7.2.0
   dartz: ^0.10.1
+  internet_connection_checker: ^0.0.1+3
 
 dev_dependencies:
   flutter_test:
